--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,18 @@
+:root {
+  --main-bg: rgb(243, 243, 243);
+  --input-color: rgb(247, 247, 247);
+  /* 侧边栏按钮变量 */
+  --btn-color: cornflowerblue;
+  --btn-default-color: #000;
+  --btn-bg: #90d0fa;
+  --btn-hov: #fff;
+}
+
 html,
 body,
 #root {
   height: 100%;
+  background-color: var(--main-bg);
 }
 
 .ant-layout-header,
