调整卡片样式

--- a/src/components/posts/post.module.scss
+++ b/src/components/posts/post.module.scss
@@ -19,6 +19,9 @@
       border-radius: 10px !important;
       li {
         margin: 0 !important;
+        display: flex !important;
+        padding: 2px 16px;
+        cursor: unset;
       }
     }
   }
