--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@
   --input-color: rgb(247, 247, 247);
   /* 侧边栏按钮变量 */
   --btn-color: cornflowerblue;
-  --btn-default-color: #000;
+  --btn-default-color: rgba(0, 0, 0, 0.45);
   --btn-bg: #90d0fa;
   --btn-hov: #fff;
 }
