--- a/src/pages/pages.module.scss
+++ b/src/pages/pages.module.scss
@@ -1,10 +1,3 @@
 .side {
-  display: flex !important;
-}
-
-.side-left {
-  justify-content: flex-end;
-}
-.side-right {
-  justify-content: flex-start;
+  position: fixed;
 }
