--- a/src/components/newPost/newpost.module.scss
+++ b/src/components/newPost/newpost.module.scss
@@ -4,5 +4,8 @@
   background: var(--input-color) !important;
   border-radius: 6px !important;
   font-size: 16px !important;
-  margin-bottom: 10px !important;
+  // margin-bottom: 10px !important;
+}
+.emit-btn {
+  margin-top: 10px !important;
 }
