--- a/src/pages/pages.module.scss
+++ b/src/pages/pages.module.scss
@@ -1,3 +1,6 @@
-.side {
-  position: fixed;
+.loading {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
