--- a/src/components/comment/comment.module.scss
+++ b/src/components/comment/comment.module.scss
@@ -2,4 +2,7 @@
   border-radius: 10px !important;
   background-color: var(--input-color) !important;
   margin: 10px 0 !important;
+  .no-comment {
+    color: var(--btn-default-color);
+  }
 }
