--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,11 @@ body,
   background-color: var(--main-bg) !important;
 }
 
+#root {
+  // 防止移动端 navi 导致横向滚动
+  overflow-x: hidden;
+}
+
 .ant-layout-header,
 .ant-layout-sider {
   background: transparent !important;
