fix delete post with home and profile * fix style error * add chrome debug config file

--- a/src/index.scss
+++ b/src/index.scss
@@ -42,7 +42,7 @@ body,
   background: var(--input-color) !important;
 }
 .ant-input-affix-wrapper {
-  padding: 4px 6px !important;
+  // padding: 4px 6px !important;
   border-radius: 6px !important;
   background: var(--input-color) !important;
 }
